--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body * {
-    margin: auto;
-    text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     
+}
+.center {
+    margin: auto;
+    text-align: center;
 }
 h1, p, img, .info h3 {
     margin-bottom: 10px;
@@ -18,4 +20,23 @@ th, td {
     border: 1.7px solid black;
     padding: 8px;
     text-align: start; 
+}
+
+/* contact page styles */
+.pContatc {
+    margin-bottom: 20px;
+}
+.contactForm {
+    display: flex;
+    flex-direction: column;
+}
+.contactForm input, .contactForm textarea {
+    width: 300px;
+    margin-bottom: 10px;
+}
+.contactForm textarea {
+    resize: none; /* can not resize the texterea  */
+}
+.contactForm input[type="button"] {
+    width: 50px;
 }
